Commands infra impl

--- a/src/Google.Cloud.SecretManager.Client/Google.Cloud.SecretManager.Client.csproj
+++ b/src/Google.Cloud.SecretManager.Client/Google.Cloud.SecretManager.Client.csproj
@@ -9,12 +9,19 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="ConsoleTables" Version="2.6.1" />
+        <PackageReference Include="Figgle" Version="0.5.1" />
+        <PackageReference Include="Kurukuru" Version="1.4.2" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Sharprompt" Version="2.4.5" />
+        <PackageReference Include="TextCopy" Version="6.2.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="UserRuntime\Helpers\" />
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
-
+    
 </Project>
