--- a/src/Google.Cloud.SecretManager.Client/Google.Cloud.SecretManager.Client.csproj
+++ b/src/Google.Cloud.SecretManager.Client/Google.Cloud.SecretManager.Client.csproj
@@ -11,10 +11,13 @@
     <ItemGroup>
         <PackageReference Include="ConsoleTables" Version="2.6.1" />
         <PackageReference Include="Figgle" Version="0.5.1" />
+        <PackageReference Include="Google.Cloud.SecretManager.V1" Version="2.5.0" />
         <PackageReference Include="Kurukuru" Version="1.4.2" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Sharprompt" Version="2.4.5" />
+        <PackageReference Include="System.Linq" Version="4.3.0" />
+        <PackageReference Include="System.Linq.Async" Version="6.0.1" />
         <PackageReference Include="TextCopy" Version="6.2.1" />
     </ItemGroup>
 
