--- a/src/Google.Cloud.SecretManager.Client/Google.Cloud.SecretManager.Client.csproj
+++ b/src/Google.Cloud.SecretManager.Client/Google.Cloud.SecretManager.Client.csproj
@@ -4,7 +4,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <AssemblyName>gcloud-secrets-cli</AssemblyName>
+        <AssemblyName>gcloud-secret-manager-cli</AssemblyName>
         <RootNamespace>Google.Cloud.SecretManager.Client</RootNamespace>
     </PropertyGroup>
 
