--- a/src/Google.Cloud.SecretManager.Client/appsettings.json
+++ b/src/Google.Cloud.SecretManager.Client/appsettings.json
@@ -1,8 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Trace",
-      "Microsoft.Hosting": "Error"
+      "Default": "Error"
     }
   }
 }
