create empty installer project

--- a/src/Google.Cloud.SecretManager.Client/Properties/launchSettings.json
+++ b/src/Google.Cloud.SecretManager.Client/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "Google.Cloud.SecretManager.Client": {
+    "Client": {
       "commandName": "Project",
       "commandLineArgs": "",
       "environmentVariables": {
