--- a/src/Google.Cloud.SecretManager.Client/Google.Cloud.SecretManager.Client.csproj
+++ b/src/Google.Cloud.SecretManager.Client/Google.Cloud.SecretManager.Client.csproj
@@ -4,7 +4,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <AssemblyName>gcloud-secrets-cli</AssemblyName>
+        <AssemblyName>gcloud-secret-manager-cli</AssemblyName>
         <RootNamespace>Google.Cloud.SecretManager.Client</RootNamespace>
     </PropertyGroup>
 
@@ -14,6 +14,7 @@
         <PackageReference Include="Google.Cloud.SecretManager.V1" Version="2.5.0" />
         <PackageReference Include="Kurukuru" Version="1.4.2" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Sharprompt" Version="2.4.5" />
         <PackageReference Include="System.Linq" Version="4.3.0" />
@@ -24,6 +25,12 @@
     <ItemGroup>
         <None Update="appsettings.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="gscli">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="gscli.bat">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
     
