--- a/src/Installer/Properties/launchSettings.json
+++ b/src/Installer/Properties/launchSettings.json
@@ -7,6 +7,10 @@
     "Installer.Osx_Test": {
       "commandName": "Project",
       "commandLineArgs": "--BuildWorkingDirectory ../../../../.. --OsxAppPath test-cloud-secret-manager-cli --OsxPathsD test-cloud-secret-manager-cli.d --OsxShortcut test-gscli"
+    },
+    "Installer.Windows_Test": {
+      "commandName": "Project",
+      "commandLineArgs": "--BuildWorkingDirectory ../../../../.. --WinAppPath test-cloud-secret-manager-cli"
     }
   }
 }
