--- a/src/GCloud.Secret.Client/GCloud.Secret.Client.csproj
+++ b/src/GCloud.Secret.Client/GCloud.Secret.Client.csproj
@@ -4,8 +4,8 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <AssemblyName>gcloud-secret-manager-cli</AssemblyName>
-        <RootNamespace>Google.Cloud.SecretManager.Client</RootNamespace>
+        <AssemblyName>gcloud-secret-cli</AssemblyName>
+        <RootNamespace>GCloud.Secret.Client</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
