--- a/test/GCloud.Secret.Client.UnitTests/GCloud.Secret.Client.UnitTests.csproj
+++ b/test/GCloud.Secret.Client.UnitTests/GCloud.Secret.Client.UnitTests.csproj
@@ -26,7 +26,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\Google.Cloud.SecretManager.Client\Google.Cloud.SecretManager.Client.csproj" />
+      <ProjectReference Include="..\..\src\GCloud.Secret.Client\GCloud.Secret.Client.csproj" />
     </ItemGroup>
 
 </Project>
