--- a/test/GCloud.Secret.Client.UnitTests/GCloud.Secret.Client.UnitTests.csproj
+++ b/test/GCloud.Secret.Client.UnitTests/GCloud.Secret.Client.UnitTests.csproj
@@ -8,7 +8,7 @@
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
 
-        <RootNamespace>Google.Cloud.SecretManager.Client</RootNamespace>
+        <RootNamespace>GCloud.Secret.Client</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
