--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,7 +2,7 @@
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <VersionPrefix>0.0.0</VersionPrefix>
-    <LangVersion>preview</LangVersion>
+    <LangVersion>latest</LangVersion>
     <Authors>Dmitry V. Sigalov</Authors>
     <Copyright>Copyright © 2025-present Dmitry V. Sigalov</Copyright>
     <PackageProjectUrl>https://github.com/DmitrySigalov/gclod-secret-cli</PackageProjectUrl>
