--- a/src/GCloud.Secret.Client/Properties/launchSettings.json
+++ b/src/GCloud.Secret.Client/Properties/launchSettings.json
@@ -6,6 +6,20 @@
       "environmentVariables": {
         "USER_FOLDER_PATH": "." // Using for the debugging only
       }
+    },
+    "Client.Help": {
+      "commandName": "Project",
+      "commandLineArgs": "help",
+      "environmentVariables": {
+        "USER_FOLDER_PATH": "." // Using for the debugging only
+      }
+    },
+    "Client.CreateProfile.Test": {
+      "commandName": "Project",
+      "commandLineArgs": "create-profile test",
+      "environmentVariables": {
+        "USER_FOLDER_PATH": "." // Using for the debugging only
+      }
     }
   }
 }
