close-release-update-documentation (#12)
* installer fix

* version release fix

* fix start bug

* readme fix

* help fix

* Readme fix

* fix

* readme fix

* readme fix

* fix

* fix

* fix

* duplication profile fix

--- a/src/GCloud.Secret.Client/Properties/launchSettings.json
+++ b/src/GCloud.Secret.Client/Properties/launchSettings.json
@@ -6,6 +6,41 @@
       "environmentVariables": {
         "USER_FOLDER_PATH": "." // Using for the debugging only
       }
+    },
+    "Client.Help": {
+      "commandName": "Project",
+      "commandLineArgs": "help",
+      "environmentVariables": {
+        "USER_FOLDER_PATH": "." // Using for the debugging only
+      }
+    },
+    "Client.Test.CreateProfile": {
+      "commandName": "Project",
+      "commandLineArgs": "create-profile test",
+      "environmentVariables": {
+        "USER_FOLDER_PATH": "." // Using for the debugging only
+      }
+    },
+    "Client.Test.GetSecrets": {
+      "commandName": "Project",
+      "commandLineArgs": "get-secrets test",
+      "environmentVariables": {
+        "USER_FOLDER_PATH": "." // Using for the debugging only
+      }
+    },
+    "Client.Test.SetEnvVar": {
+      "commandName": "Project",
+      "commandLineArgs": "set-env-var test",
+      "environmentVariables": {
+        "USER_FOLDER_PATH": "." // Using for the debugging only
+      }
+    },
+    "Client.Test.DeleteProfile": {
+      "commandName": "Project",
+      "commandLineArgs": "delete-profile test",
+      "environmentVariables": {
+        "USER_FOLDER_PATH": "." // Using for the debugging only
+      }
     }
   }
 }
