--- a/src/Installer/Properties/launchSettings.json
+++ b/src/Installer/Properties/launchSettings.json
@@ -6,7 +6,7 @@
     },
     "Installer.Osx_Test": {
       "commandName": "Project",
-      "commandLineArgs": "--BuildWorkingDirectory ../../../../.. --OsxAppPath cloud-manager-cli-test --OsxPathsD cloud-secret-cli-test.d --OsxShortcut gscli-test"
+      "commandLineArgs": "--BuildWorkingDirectory ../../../../.. --OsxAppPath gcloud-secrets-cli-test --OsxPathsD gcloud-secrets-cli-test.d --OsxShortcut gscli-test"
     },
     "Installer.Windows_Test": {
       "commandName": "Project",
